# vespper

./: .env.example  .eslintrc.json  .gitignore  .lintstagedrc.js  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  TROUBLESHOOTING.md  changes.patch  commitlint.config.js  docker-compose.common.yml  docker-compose.images.yml  docker-compose.infra.yml  docker-compose.sh.yml  docker-compose.yml  nx.json  package-lock.json  package.json  start.sh  tsconfig.base.json
.husky/: pre-commit
config/: vault.hcl
docs/: .eslintrc.json  README.md  docusaurus.config.ts  package-lock.json  package.json
examples/: README.md
services/api/: .env.dev  (+16 more)
services/data-processor/: .env.dev  .env.docker  .gitignore  Dockerfile  app.yaml  finetuning.ipynb  project.json  pyproject.toml
services/data-processor/src/: build.py  embeddings.py  loader.py  main.py  utils.py
services/data-processor/src/common/: secrets.py
services/data-processor/src/db/: __init__.py  index.py  integrations.py  organization.py  plan_field.py  plan_state.py  types.py
services/data-processor/src/loaders/: __init__.py  base.py  confluence.py  github.py  jira.py  notion.py  pagerduty.py  slack.py
services/data-processor/src/loaders/raw_readers/: confluence.py  github.py  github_issues.py  github_repo.py  slack.py
services/data-processor/src/loaders/readers/: README.md  confluence.py  github_issues.py  github_repo.py  jira.py  notion.py  pagerduty.py  slack.py
services/data-processor/src/loaders/utils/: github_client.py
services/data-processor/src/models/: common.py
services/data-processor/src/rag/: base.py  chromadb.py  pinecone.py  utils.py
services/data-processor/src/snapshots/: utils.py
services/log-parser/: .gitignore  Dockerfile  playground.ipynb  project.json  pyproject.toml
services/log-parser/src/: main.py
services/log-parser/src/parsers/: drain.py
services/log-parser/src/providers/coralogix/: models.py  processor.py
(+444 files in other folders)
